ADD CATEGORY: General stuffs

--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -271,6 +271,9 @@
   margin: -20px 0 0;
   padding: 15px 0;
 }
+.totebay .table-block__title > * {
+  font-family: 'Open Sans', 'Tahoma', 'Verdana', sans-serif;
+}
 .totebay .table-block__title .button-refresh {
   margin: -8px 0;
 }
@@ -290,17 +293,15 @@
 .totebay .table-block__title .button-sync .dropdown-menu li + li {
   border-top: 1px solid #dedede;
 }
-.totebay .table-block__title .button-sync .dropdown-menu li {
+.totebay .table-block__title .button-sync .dropdown-menu li a {
   display: block;
   padding: 0 10px;
   color: #363a41;
   font-size: 13px;
   line-height: 2.5;
-  cursor : pointer;
 }
-.totebay .table-block__title .button-sync .dropdown-menu li:hover {
+.totebay .table-block__title .button-sync .dropdown-menu li a:hover {
   color: #fff;
-  background : #00aff0;
 }
 .totebay .table-block__search, .totebay .table-block__message {
   display: -webkit-box;
