--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -341,6 +341,10 @@
       margin: -20px 0 0;
       padding: 15px 0;
 
+      > * {
+        font-family: 'Open Sans', 'Tahoma', 'Verdana', sans-serif;
+      }
+
       .button-refresh {
         margin: -8px 0;
       }
