--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -31,6 +31,10 @@
 .totebay .bdrs-3 {
   border-radius: 3px;
 }
+.totebay .process-icon-check-circle:before {
+  content: "\E86C";
+  font-family: "Material Icons";
+}
 .totebay .js-popin-help {
   text-decoration: none !important;
 }
