--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -22,6 +22,9 @@
 .totebay .pos-a {
   position: absolute;
 }
+.totebay .no-padding {
+  padding: 0 !important;
+}
 .totebay .width-num {
   width: 60px !important;
 }
