--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -32,6 +32,10 @@
     position: absolute;
   }
 
+  .no-padding {
+    padding: 0 !important;
+  }
+
   .width-num {
     width: 60px !important;
   }
