--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -54,6 +54,10 @@
   content: "\E86C";
   font-family: "Material Icons";
 }
+.totebay .glyphicon-ok:before {
+  content: "\E5CA";
+  font-family: "Material Icons";
+}
 .totebay .js-popin-help {
   text-decoration: none !important;
 }
@@ -555,6 +559,71 @@
 }
 .totebay #popin-container #category_config .alert-info:before {
   top: auto;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select {
+  width: 100%;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-toggle {
+  padding: 6px 12px;
+  background-color: #f5f8f9;
+  color: #555;
+  border: 1px solid #C7D6DB;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-toggle:focus {
+  border-color: #66afe9;
+  outline: 0 !important;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-toggle .caret {
+  right: 7px;
+  border-top-color: #555 !important;
+  border-top: 6px solid;
+  border-right: 3px solid transparent;
+  border-left: 3px solid transparent;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .form-control {
+  width: 100%;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open {
+  max-height: 255px !important;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .bs-searchbox {
+  position: relative;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .bs-searchbox:before {
+  content: '\E8B6';
+  position: absolute;
+  right: 14px;
+  top: 50%;
+  margin-top: -11px;
+  font-size: 22px;
+  font-family: "Material Icons";
+  line-height: 1;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .bs-searchbox input:focus {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 20px rgba(102, 175, 233, 0.6) !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 20px rgba(102, 175, 233, 0.6) !important;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner {
+  max-height: 204px !important;
+  margin-top: 5px;
+  border-top: 1px solid #eee;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner a:hover {
+  background-color: #eee;
+  color: #555;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner .active a,
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner a:hover {
+  color: #fff;
+  background-color: #45cdf8;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .glyphicon-ok {
+  margin: 0;
+  font-size: 18px;
+  line-height: 0.8;
+  font-weight: bold;
 }
 .totebay #popin-container #category_config .category_ps_list,
 .totebay #popin-container #category_config #last_page_categorie_ps {
