--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -563,6 +563,9 @@
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select {
   width: 100%;
 }
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select.open .caret {
+  transform: rotate(180deg);
+}
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-toggle {
   padding: 6px 12px;
   background-color: #f5f8f9;
@@ -610,14 +613,17 @@
   margin-top: 5px;
   border-top: 1px solid #eee;
 }
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner .active a {
+  color: #fff;
+  background-color: #45cdf8;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner .active a:hover {
+  color: #fff;
+  background-color: #45cdf8;
+}
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner a:hover {
   background-color: #eee;
   color: #555;
-}
-.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner .active a,
-.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner a:hover {
-  color: #fff;
-  background-color: #45cdf8;
 }
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .glyphicon-ok {
   margin: 0;
