--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -588,8 +588,17 @@
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .form-control {
   width: 100%;
 }
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu li {
+  padding: 3px 10px;
+  cursor: pointer;
+}
+.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu li:hover {
+  background-color: #eee;
+  color: #555;
+}
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open {
-  max-height: 255px !important;
+  max-height: 270px !important;
+  overflow: auto !important;
 }
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .bs-searchbox {
   position: relative;
@@ -607,23 +616,6 @@
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .bs-searchbox input:focus {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 20px rgba(102, 175, 233, 0.6) !important;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 20px rgba(102, 175, 233, 0.6) !important;
-}
-.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner {
-  max-height: 204px !important;
-  margin-top: 5px;
-  border-top: 1px solid #eee;
-}
-.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner .active a {
-  color: #fff;
-  background-color: #45cdf8;
-}
-.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner .active a:hover {
-  color: #fff;
-  background-color: #45cdf8;
-}
-.totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .dropdown-menu.inner a:hover {
-  background-color: #eee;
-  color: #555;
 }
 .totebay #popin-container #category_config .first_page_popin .bootstrap-select .dropdown-menu.open .glyphicon-ok {
   margin: 0;
