--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -313,24 +313,24 @@
 .totebay .table-block__title .button-sync .dropdown-menu {
   list-style-type: none;
   padding: 0;
-  width: 250px;
-  min-width: unset;
+  min-width: 300px;
   right: 0;
   left: auto;
   overflow: hidden;
 }
-.totebay .table-block__title .button-sync .dropdown-menu li + li {
-  border-top: 1px solid #dedede;
-}
-.totebay .table-block__title .button-sync .dropdown-menu li a {
+.totebay .table-block__title .button-sync .dropdown-menu li {
   display: block;
   padding: 0 10px;
   color: #363a41;
   font-size: 13px;
   line-height: 2.5;
+  cursor: pointer;
 }
-.totebay .table-block__title .button-sync .dropdown-menu li a:hover {
-  color: #fff;
+.totebay .table-block__title .button-sync .dropdown-menu li + li {
+  border-top: 1px solid #dedede;
+}
+.totebay .table-block__title .button-sync .dropdown-menu li:hover {
+  background: #f5f5f5;
 }
 .totebay .table-block__search, .totebay .table-block__message {
   display: -webkit-box;
