--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -870,13 +870,15 @@
 
           li {
             @extend .glyphicon-ok;
-            position: absolute;
-            top: 50%;
-            right: 10px;
-            margin-top: -8px;
-            font-size: 16px;
-            line-height: 1;
-            color: #ccc;
+            &:before {
+              position: absolute;
+              top: 50%;
+              right: 10px;
+              margin-top: -8px;
+              font-size: 16px;
+              line-height: 1;
+              color: #ccc;
+            }
           }
         }
       }
