--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -44,6 +44,10 @@
 
   .width-num {
     width: 60px !important;
+    padding: 0px 5px;
+  }
+  .label-tooltip{
+    background-color: #edf7fb;
   }
 
   .big {
