--- a/views/sass/admin.scss
+++ b/views/sass/admin.scss
@@ -896,6 +896,7 @@
       .ebay_select {
         width: 50px;
         display: inline-block;
+        padding: 5px;
       }
 
       #impact_prix {
